RESOLVED FIXED246719
DumpRenderTree does not seem to support PingLoad to HTTPS
https://bugs.webkit.org/show_bug.cgi?id=246719
Summary DumpRenderTree does not seem to support PingLoad to HTTPS
Brent Fulgham
Reported 2022-10-18 16:02:09 PDT
While debugging failing Reporting API tests, I found that test cases that attempted to PingLoad to an HTTPS endpoint always fail. It seems like DRT is not properly connecting the authentication/certificate logic we use for other types of loads. Example failure: imported/w3c/web-platform-tests/reporting/generateTestReport-honors-endpoint.https.sub.html. I believe this is also the cause of the failure for imported/w3c/web-platform-tests/reporting/reporting-api-honors-limits.https.sub.html. Error: "m_localizedDescription WTF::String { length = 27, contents = 'Not allowed to authenticate' } " It looks like this change didn't update DRT: https://github.com/WebKit/WebKit/pull/3715
Attachments
Brent Fulgham
Comment 1 2022-10-24 16:44:36 PDT
Brent Fulgham
Comment 2 2022-10-24 16:46:34 PDT
This is actually: <rdar://101040717>
Brent Fulgham
Comment 3 2022-10-26 13:57:08 PDT
Brent Fulgham
Comment 4 2022-10-28 09:32:43 PDT
EWS
Comment 5 2022-10-31 15:43:40 PDT
Committed 256173@main (6db9bb4cc51f): <https://commits.webkit.org/256173@main> Reviewed commits have been landed. Closing PR #5824 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.