DumpRenderTree does not seem to support PingLoad to HTTPS https://bugs.webkit.org/show_bug.cgi?id=246719 <rdar://101040717>

Reviewed by Chris Dumez.

Revise DumpRenderTree to handle ServerTrust protection space evaluations,
and to allow them under the same cases as Modern WebKit.

* LayoutTests/platform/mac-wk1/TestExpectations: Correct some expectations.
* Source/WebCore/page/DeprecatedGlobalSettings.h:
* Source/WebCore/testing/js/WebCoreTestSupport.cpp:
(WebCoreTestSupport::allowsAnySSLCertificate): Added getter to expose state to DRT.
* Source/WebCore/testing/js/WebCoreTestSupport.h:
* Tools/DumpRenderTree/TestRunner.cpp:
(TestRunner::allowsAnySSLCertificate): Added.
* Tools/DumpRenderTree/TestRunner.h:
(TestRunner::allowAnyHTTPSCertificateForAllowedHosts const): Added.
(TestRunner::setAllowAnyHTTPSCertificateForAllowedHosts): Added.
(TestRunner::localhostAliases const): Added.
(TestRunner::setLocalhostAliases): Added.
* Tools/DumpRenderTree/mac/DumpRenderTree.mm:
(initializeGlobalsFromCommandLineOptions): Update to recognize the allowed hosts test runner argument.
(dumpRenderTree):
(runTest):
* Tools/DumpRenderTree/mac/ResourceLoadDelegate.mm:
(canAuthenticateServerTrustAgainstProtectionSpace): Added.
(-[ResourceLoadDelegate webView:resource:didReceiveAuthenticationChallenge:fromDataSource:]): Updated to behave
the same way as WebKitTestRunner.
(-[ResourceLoadDelegate webView:resource:canAuthenticateAgainstProtectionSpace:forDataSource:]): Added.

Canonical link: https://commits.webkit.org/256173@main